--- a/Index.html
+++ b/Index.html
@@ -6,15 +6,14 @@
 	</head>
 	    
 	<body style="background-color: darkgrey">
-		<div align="center" />
-		<h1 style="color:crimson">Ejercicios</h1> <br />
-		<hr style="border-color: crimson">
-		<a href="Practica%25201/practica1.html">Ejercicio 1</a> <br />
-		<a href="Practica%25202/practica2.html">Ejercicio 2</a> <br />
-		<a href="Practica%25203/practica3.html">Ejercicio 3</a> <br />
-		<a href="Practica%25204/practica4.html">Ejercicio 4</a> <br />
-		<a href="Practica%25205/practica5.html">Ejercicio 5</a> <br />
-		<a href="Practica%25206/practica6.html">Ejercicio 6</a> <br />
+		
+		<h1>Ejercicios</h1> <br />
+		<a href="Practicas/practica1.html">Ejercicio 1</a> <br />
+		<a href="Practicas/practica2.html">Ejercicio 2</a> <br />
+		<a href="Practicas/practica3.html">Ejercicio 3</a> <br />
+		<a href="Practicas/practica4.html">Ejercicio 4</a> <br />
+		<a href="Practicas/practica5.html">Ejercicio 5</a> <br />
+		<a href="Practicas/practica6.html">Ejercicio 6</a> <br />
 	</body>
 	    
 </html>
