--- a/Index.html
+++ b/Index.html
@@ -1,12 +1,10 @@
 <!doctype html>
 <html>
-        <head>
-		<meta charset="utf-8">
+	<head>
+		
 		<title>Practicas AW</title>
 	</head>
-	    
-	<body style="background-color: darkgrey">
-		
+	<body>
 		<h1>Ejercicios</h1> <br />
 		<a href="Practicas/practica1.html">Ejercicio 1</a> <br />
 		<a href="Practicas/practica2.html">Ejercicio 2</a> <br />
