--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   
   <body>
     <h1>Practicas</h1><br />
-    <a href="Practicas/practica 1/practica1.html">Ejercicio 1</a>
+    <a href="Practicas/Practica 1/practica1.html">Ejercicio 1</a>
   </body>
   </html>
