--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
   <body>
     <h1>Practicas</h1><br />
     <a href="Practicas/Practica 1/practica1.html">Ejercicio 1</a>
+    <a href="Practicas/Practica 2/practica2.html">Ejercicio 2</a>
+    <a href="Practicas/Practica 3/practica3.html">Ejercicio 3</a>
+    <a href="Practicas/Practica 4/practica4.html">Ejercicio 4</a>
+    <a href="Practicas/Practica 5/practica5.html">Ejercicio 5</a>
+    <a href="Practicas/Practica 6/practica6.html">Ejercicio 6</a>
   </body>
   </html>
