--- a/index.html
+++ b/index.html
@@ -12,5 +12,12 @@
     <a href="Practicas/Practica 4/practica4.html">Ejercicio 4</a><br />
     <a href="Practicas/Practica 5/practica5.html">Ejercicio 5</a><br />
     <a href="Practicas/Practica 6/practica6.html">Ejercicio 6</a><br />
+    <a href="Practicas/Practica 6/practica7.html">Ejercicio 7</a><br />
+    <a href="Practicas/Practica 6/practica8.html">Ejercicio 8</a><br />
+    <a href="Practicas/Practica 6/practica9.html">Ejercicio 9</a><br />
+    <a href="Practicas/Practica 6/practica10.html">Ejercicio 10</a><br />
+    <a href="Practicas/Practica 6/practica11.html">Ejercicio 11</a><br />
+    <a href="Practicas/Practica 6/practica12.html">Ejercicio 12</a><br />
+    <a href="Practicas/Practica 6/practica13.html">Ejercicio 13</a><br />
   </body>
   </html>
