--- a/Practicas/Practica 9/practica9.html
+++ b/Practicas/Practica 9/practica9.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     
   <head>
@@ -11,7 +12,7 @@
   </head>
     
     <body>
-        <h2>Tabla basica de 3x2</h2>
+        <h2>Tabla con columna expandida</h2>
         <table>
                 <tr>
                     <td >Item 1</td>
