--- a/Practicas/Practica 8/practica8.html
+++ b/Practicas/Practica 8/practica8.html
@@ -12,7 +12,7 @@
   </head>
     
     <body>
-        <h2>Tabla con linea expandida <ROWSPAN></h2>
+        <h1>Tabla con linea expandida "<ROWSPAN>"</h1>
         <table>
             <tr>
                 <td >Item 1</td>
