--- a/Practicas/Practica 10/practica10.html
+++ b/Practicas/Practica 10/practica10.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     
   <head>
@@ -11,7 +12,7 @@
   </head>
     
     <body>
-        <h2>Tabla basica de 3x2</h2>
+        <h2>Tabla con combinacion de cabeceras multiples y columnas expandidas</h2>
         <table>
             <thead>
                 <tr>
