--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     <a href="Practicas/Practica 11/practica11.html">Ejercicio 11</a><br />
     <a href="Practicas/Practica 12/practica12.html">Ejercicio 12</a><br />
     <a href="Practicas/Practica 13/practica13.html">Ejercicio 13</a><br />
+    <a href="Practicas/Practica 14/practica14.html">Ejercicio 14</a><br />
   </body>
   </html>
