--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
     <a href="Practicas/Practica 12/practica12.html">Ejercicio 12</a><br />
     <a href="Practicas/Practica 13/practica13.html">Ejercicio 13</a><br />
     <a href="Practicas/Practica 14/practica14.html">Ejercicio 14</a><br />
+    <a href="Practicas/PAGINA WEB/index.html">Pagina web</a><br />
   </body>
   </html>
