--- a/PAGINA WEB/index.html
+++ b/PAGINA WEB/index.html
@@ -26,14 +26,14 @@
                         </div>
 
                         <div class="nav-link-wrapper">
-                            <a href="/">horario</a>  
+                            <a href="Subs/timetable.html">horario</a>  
                         </div>
 
                     </div>
 
                     <div class="right-side">
                         <div class="brand">
-                            <a href="/">Ejercicios</a>
+                            <a href="https://michaelnjv.github.io/AWMNJ/">Ejercicios</a>
                         </div>
                     </div>
             </div>
