--- a/PAGINA WEB/index.html
+++ b/PAGINA WEB/index.html
@@ -43,12 +43,12 @@
         <div class="content-wrapper">
             <div class="portfolio-items-wrapper">
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image: url(images/curriculum.jfif);"></div>
+                    <div class="portfolio-img-background" style="background-image: url(https://cdn.discordapp.com/attachments/702145082043924520/783110803825885204/curriculum.jpg);"></div>
                 
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
                             <a href="https://www.pngwing.com/en/search?q=pizza">
-                                    <img src="images/logo curriculum.png">
+                                    <img src="https://cdn.discordapp.com/attachments/702145082043924520/783110314090430514/logo_curriculum.png">
                             </a>
                         </div>
                         
