--- a/PAGINA WEB/index.html
+++ b/PAGINA WEB/index.html
@@ -47,7 +47,7 @@
                 
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
-                            <a href="https://www.pngwing.com/en/search?q=pizza">
+                            <a href="Subs/curriculum.html">
                                     <img src="https://cdn.discordapp.com/attachments/702145082043924520/783110314090430514/logo_curriculum.png">
                             </a>
                         </div>
