--- a/PAGINA WEB/index.html
+++ b/PAGINA WEB/index.html
@@ -59,12 +59,12 @@
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image: url(images/pizza.png);"></div>
+                    <div class="portfolio-img-background" style="background-image: url(https://cdn.discordapp.com/attachments/702145082043924520/783110323564970015/pizza.png);"></div>
                         
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
                             <a href="/">
-                                <img src="images/logo pizza.png">
+                                <img src="https://cdn.discordapp.com/attachments/702145082043924520/783110317261455400/logo_pizza.png">
                             </a>
                         </div>
                             
