--- a/PAGINA WEB/index.html
+++ b/PAGINA WEB/index.html
@@ -114,7 +114,7 @@
         <div class="container-bottom">
             <div class="footer-wrapper">
                 <div class="left-side-bottom">
-                    <a href="/">
+                    <a href="https://pyxis.nymag.com/v1/imgs/392/b88/f2cae65a3354b4fc3a9ff4da05bd9821e7-31-birthday-boy.rsquare.w700.jpg">
                         No hagas clic aqui
                     </a>
                 </div>
