--- a/PAGINA WEB/Subs/pizza.html
+++ b/PAGINA WEB/Subs/pizza.html
@@ -4,7 +4,7 @@
     <head>
         <title>Pizzeria</title>
         <meta name="author" content="Michael Nina Jancko">
-        <link rel="stylesheet" href="AWMNJ/PAGINA WEB/styles.css">
+        <link rel="stylesheet" href="PAGINA WEB/styles.css">
         <style>
             img {
                 padding-top: 5%;
