--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
     <a href="Practicas/Practica 13/practica13.html">Ejercicio 13</a><br />
     <a href="Practicas/Practica 14/practica14.html">Ejercicio 14</a><br />
     <a href="PAGINA WEB/index.html">Pagina web</a><br />
+    <a href="PAGINA WEB/styles.css">CSS</a><br />
   </body>
   </html>
