--- a/PAGINA WEB/Subs/timetable.html
+++ b/PAGINA WEB/Subs/timetable.html
@@ -3,7 +3,7 @@
     <head>
         <title>Horario</title>
         <meta name="author" content="Michael Nina Jancko">
-        <link rel="stylesheet" href="/AWMNJ/PAGINA WEB/styles.css">
+        <link rel="stylesheet" href="https://michaelnjv.github.io/AWMNJ/PAGINA%20WEB/styles.css">
         <style>
             body {
                 margin: 0px;
