--- a/PAGINA WEB/Subs/curriculum.html
+++ b/PAGINA WEB/Subs/curriculum.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Curriculum</title>
-        <link rel="stylesheet" href="PAGINA WEB/styles.css">
+        <link rel="stylesheet" href="https://michaelnjv.github.io/AWMNJ/PAGINA%20WEB/styles.css">
         <style>
             .main {
                 position: relative;
