--- a/PAGINA WEB/Subs/music/Music.html
+++ b/PAGINA WEB/Subs/music/Music.html
@@ -4,7 +4,7 @@
     <head>
         <title>Musica</title>
         <meta name="author" content="Michael Nina Jancko">
-        <link rel="stylesheet" href="D:\PAGINA WEB\styles.css">
+        <link rel="stylesheet" href="https://michaelnjv.github.io/AWMNJ/PAGINA%20WEB/styles.css">
         <style>
             .body-wrapper {
                 padding-top: 5%;
