--- a/PAGINA WEB/Subs/curriculum.html
+++ b/PAGINA WEB/Subs/curriculum.html
@@ -44,7 +44,7 @@
         </div>
 
         <div class="main">     
-            <img src="D:\PAGINA WEB\Subs\Curriculum\foto.png" width="20%" height="20%">
+            <img src="Curriculum/foto.png" width="20%" height="20%">
 
             <fieldset class="c-header">
                 
