--- a/PAGINA WEB/Subs/pizza.html
+++ b/PAGINA WEB/Subs/pizza.html
@@ -22,7 +22,7 @@
                     <div class="left-side">
 
                         <div class="nav-link-wrapper">
-                            <a href="index.html">Inicio</a>
+                            <a href="https://michaelnjv.github.io/AWMNJ/PAGINA%20WEB/index.html">Inicio</a>
                         </div>
 
                         <div class="nav-link-wrapper">
@@ -30,7 +30,7 @@
                         </div>
 
                         <div class="nav-link-wrapper">
-                            <a href="/">horario</a>  
+                            <a href="https://michaelnjv.github.io/AWMNJ/PAGINA%20WEB/Subs/timetable.html">horario</a>  
                         </div>
 
                     </div>
@@ -99,7 +99,7 @@
         <div class="container-bottom">
             <div class="footer-wrapper">
                 <div class="left-side-bottom">
-                    <a href="/">
+                    <a href="https://pyxis.nymag.com/v1/imgs/392/b88/f2cae65a3354b4fc3a9ff4da05bd9821e7-31-birthday-boy.rsquare.w700.jpg">
                         No hagas clic aqui
                     </a>
                 </div>
